--- a/index.html
+++ b/index.html
@@ -42,6 +42,56 @@
                 <section id="capa">
                     <img src="imagens/museu.png" alt="">
                 </section>
+
+                <section id="postagens">
+
+                    <article id="video">
+
+                        <h3>Conheça o museu</h3>
+                        <iframe width="310" height="170" src="https://www.youtube.com/embed/RGUYb-hivrc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </article>
+
+                    <article id="mapa">
+                        <h3>Mapa: Encontre o museu</h3>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.206445749991!2d-43.22910382374343!3d-22.905755037836094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997e58a085b7af%3A0x4d11e9a933d38ce3!2sMuseu%20Nacional%20-%20UFRJ!5e0!3m2!1spt-BR!2sbr!4v1690835050806!5m2!1spt-BR!2sbr" width="310" height="170" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                    </article>
+
+                    <article id="exposicoes">
+                        <h3>Exposições</h3>
+                        <ul>
+                            <li>
+                                <a href="#">Os assustadores insetos</a>
+                            </li>
+                            <li>
+                                <a href="#">O crânio de Luzia, a mulher mais antiga do Brasil</a>
+                            </li>
+                            <li>
+                                <a href="#">Preguiça gigante e tigre-dentes-de-sabre</a>
+                            </li>
+                            <li>
+                                <a href="#">Plantas do Brasil Central</a>
+                            </li>
+                            <li>
+                                <a href="#">Teresa Cristina: A Imperatriz Arqueóloga</a>
+                            </li>
+                            <li>
+                                <a href="#">Arte com Dinossauros - Paleoarte</a>
+                            </li>
+                            <li>
+                                <a href="#"><strong>Veja todos (65)</strong></a>
+                            </li>
+                        </ul>
+                    </article>
+
+                    <article id="historia">
+                        <h3>200 anos de história</h3>
+                        <p>Era uma vez um antigo casarão, erguido há séculos por uma família nobre, que agora se encontrava envolto em histórias e memórias preciosas. Hoje, ele abriga um museu que preserva o passado e nos convida a viajar no tempo.</p>
+                        <a href=""><strong>Leia mais</strong></a>
+                    </article>
+
+                </section>
+
             </div>
             <aside>
                 <section id="depoimento">
@@ -88,6 +138,22 @@
                 </section>
 
             </aside>
+
+            <footer>
+                <p>
+                    <a href="">Home</a>
+                    <a href="">Exposições</a>
+                    <a href="">Pesquisa</a>
+                    <a href="">Acervo</a>
+                    <a href="">Vídeos</a>
+                    <a href="">Fotos</a>
+                    <a href="">Contato</a>
+                </p>
+                <p>
+                    2023 <a href="">Museu Nacional</a> - Todos os direitos reservados.
+                </p>
+            </footer>
+
         </div>
         
     </div> <!-- fim container -->
